--- a/Computer Science/Computer Organization and Design/2. 명령어 컴퓨터 언어.md
+++ b/Computer Science/Computer Organization and Design/2. 명령어 컴퓨터 언어.md
@@ -1,9 +1,29 @@
 컴퓨터 하드웨어 에게 일을 시키려면 하드웨어가 알아 들을 수 있는 언어로 말을 한다. - 컴 언어 에서 단어를 명령어 라고 하고, 그 어휘를 명령어 집합 이라고 한다.
 
-#하드웨어 연산 - 모든 컴퓨터는 산술 연산을 할수 있어야한다.
-피연산자 - 상위 수준 언어 프로그램과 달리 산술 명령어의 피연산자에는 제약이 있다. 레지스터 라고 하는 하드웨어로 직접 구현된 특수 위치 몇 곳에 있는 것만을 사용가능.
+ # 하드웨어 연산 
+ - 모든 컴퓨터는 산술 연산을 할수 있어야한다.
+# 피연산자 
+- 상위 수준 언어 프로그램과 달리 산술 명령어의 피연산자에는 제약이 있다. 레지스터 라고 하는 하드웨어로 직접 구현된 특수 위치 몇 곳에 있는 것만을 사용가능.
 프로그래밍 언어에서 사용하는 변수와 하드웨어 레지스터의 큰 차이점은 레지스터 개수가 한정되어있다. 산술 명령어의 모든 피연산자는 32개의 64비트 레지스터 중 하나이어야 한다는 제약이 추가된다.
 
 32개로 제한하는 이유는. 레지스터가 많아지면 전기신호가 더 멀리까지 전달되어야하므로 클럭 사이클 시간이 길어진다. 
 
-메모리 피연산자.
+# 메모리 피연산자
+- 프로그래밍언어에는 값하나만을 기억하는 단순 변수 외에 array , structure 같은 복잡한 자료구조가 있다. 이러한 자료구조 하나에는 레지스터 개수보다 훨씬 많은 데이터 우너소가 있을 수 있다. 프로세서는 소량의 데이터만을 레지스터에 저장 할 수 있지만, 컴퓨터 메모리는 수십억 개의 데이터를 저장할 수 있다. 배열이나 구조제 같은 자료구조는 메모리에 보관.
+- 위와 같이 lEG8v8 의 산술 연산은 레지스터에사만 실행 되므로 메모리와 레지스터 간에 데이털르 주고 받는 명령어가 있어야한다. 데이터 전송 명령어라고 한다. 메모리에 기억된 데이터에 접근하려면 명령어가 메모리 주소를 지정해야 한다. 메모리는 주소가 인덱스 역할을 한는 큰 일차원 배열이다. 주소는 0 부터 시작한다. 메모리에서 레지스터로 데이터를 복사해 오는 데이터 전송을 load 라고 한다
+- 프로그램에서 8비트로 구성된 바이트를 많이 사용하므로 대부분의 컴퓨터는 바이트 단위로 주소를 지정한다. 더블 워드 주소는 더블워드를 구성하는 8바이트 주소중 하나를 사용한다. 
+
+32비트 컴퓨터에서 64 비트 컴퓨터로 넘어가면서 컴파일러 작성자 들은 c언어 데이터 타입의 크기를 선책해야한다. 모든 정보는 이진 자릿수 , 즉 비트로 구성되므로 비트가 계산의 기본단위가 된다.
+LEGv8 더블워드의 길이는 2^64 개의 서로다른 비트 패턴을 표현 할수 있다. 
+
+오늘날의 컴퓨터는 두가지 중요한 원리에 바탕을 두고 있다.
+
+1. 명령어는 숫자로 표현된다. 
+2. 프로그램은 메모리에 기억되어있어서 데이터 처럼 읽고 쓸 수 있다.
+
+이것이 내장프로그램의 개념이다. 이 개념덕분에 눈부시게 발전 할 수 있었다. 메모리에는 편집기가 편집중인 소스코드, 컴파일 된 기계어 프로그램, 실행 프로그램이 사용하는 텍스트 데이터, 기계어를 생성하는 컴파일러까지 기억될 수 있다. 
+
+# procedure
+- 프로시저나 함수는 이해하기 쉽고 재사용이 가능하도록 프로그램을 구조화 하는 방법중 하나이다. 인수는 프로시저에 값을 보내고 결과를 받아오는 일을 하므로, 프로그램의 다른 부분 및 데이터와 프로시저 사이의 인터페이스 역할을 한다. 컴파일러가 프로시저를 번역하는데 인수 레지스터 8개만으로 부족한 경우가 있다. 레지스터 스필ㄹ링에 이상적인 자료구조는 'stack' 이다. 나중에 들어간 것이 먼저나오는 큐이다. 스택에는 다음 프로시저가 스필할 레지스터를 저장할 장소나 할당된 주소를 가리키기위한 포인터가 필요하다. 스택에 데이터를 넣는 작업을 push 데이터를 꺼내는 것을 pop 이라고 한다.
+
+c언어에는 automatic과 static 두가지 유형이 있다. 자동변수는 프로시저 내에서만 정의되는것으로 프로시저가 종료되면 없어진다. 모든 프로시저의 외부에서 선언된 c변수는 정적 변수이며, 정적 데이털르 쉽게 접근할 수있도록 전역 포인터라 불리는 레지스터를 지정해 두기도 한다.
