Update 2. 명령어 컴퓨터 언어.md

--- a/Computer Science/Computer Organization and Design/2. 명령어 컴퓨터 언어.md
+++ b/Computer Science/Computer Organization and Design/2. 명령어 컴퓨터 언어.md
@@ -27,3 +27,12 @@ LEGv8 더블워드의 길이는 2^64 개의 서로다른 비트 패턴을 표현
 - 프로시저나 함수는 이해하기 쉽고 재사용이 가능하도록 프로그램을 구조화 하는 방법중 하나이다. 인수는 프로시저에 값을 보내고 결과를 받아오는 일을 하므로, 프로그램의 다른 부분 및 데이터와 프로시저 사이의 인터페이스 역할을 한다. 컴파일러가 프로시저를 번역하는데 인수 레지스터 8개만으로 부족한 경우가 있다. 레지스터 스필ㄹ링에 이상적인 자료구조는 'stack' 이다. 나중에 들어간 것이 먼저나오는 큐이다. 스택에는 다음 프로시저가 스필할 레지스터를 저장할 장소나 할당된 주소를 가리키기위한 포인터가 필요하다. 스택에 데이터를 넣는 작업을 push 데이터를 꺼내는 것을 pop 이라고 한다.
 
 c언어에는 automatic과 static 두가지 유형이 있다. 자동변수는 프로시저 내에서만 정의되는것으로 프로시저가 종료되면 없어진다. 모든 프로시저의 외부에서 선언된 c변수는 정적 변수이며, 정적 데이털르 쉽게 접근할 수있도록 전역 포인터라 불리는 레지스터를 지정해 두기도 한다.
+
+# 문자와 문자열
+- 컴퓨터는 원래 숫자를 빨리 처리하기 위해 발명된 것이지만, 사용화 되자마자 텍스트 처리에 이용되기 시작하였다. 오늘날 대부분의 컴퓨터는 8비트 ,바이트로 문자를 표현하며 거의 모든 컴퓨터가 ASCII를 상용한다.
+
+# 프로그램 번역과 실행
+- 논리적으로 4단계를 거쳐서 컴퓨터가 실행할수 있는 프로그램이 된다.
+- 컴파일러 = c 프로그램을 어셈블리 언어 프로그램으로 바꾼다. 어셈블리 언어 프로그램은 컴퓨터가 이해할수있는 심벌형태이다. 
+- 어셈블러 -
+- 링커 - 어떤 프로시저를 한줄이라도 고치면, 전체 프로그램을 다시 컴파일하고 어셈블해야하낟. 이러헫되면 컴퓨터의 자원이 심각하게 낭비된다. 이것을 피하기 위해 각 프로시저를 따로따ㅗㄹ 컴파일, 어셈블 하느것이다. 어떤 프로시저가 바뀌어도 바뀐 프로시저만 다시 번역하면 된다. 
