--- a/Mathematics/staticstis/1.md
+++ b/Mathematics/staticstis/1.md
@@ -1,4 +1,4 @@
-## probability and counting.
+## ## probability and counting.
 sample space is the set of all possible outcome of an experiment
 
 An event is a subset of the sample space
@@ -10,6 +10,6 @@ P(A) = 특정한 사건이 일어날 확률. = 간단하
 # binary coefficient
 -(n k) = n! / (n-k)! k! 
 
-## story proofs, Axioms of probability
+## ## story proofs, Axioms of probability
 
  
